--- a/art-gallery-website/src/scss/layouts/_gallery.scss
+++ b/art-gallery-website/src/scss/layouts/_gallery.scss
@@ -4,6 +4,10 @@
   display: grid;
 }
 
+%max-w-21 {
+  max-width: 21.875rem;
+}
+
 %fit-image {
   width: 100%;
   height: 100%;
@@ -16,6 +20,10 @@
 
 .gallery {
   @extend %d-grid;
+
+  .gallery__content {
+    @extend %max-w-21;
+  }
   .gallery__image {
     @extend %fit-image;
   }
@@ -30,6 +38,10 @@
 .gallery-secondary {
   @extend %d-grid;
   gap: 1rem;
+
+  .gallery__content--secondary {
+    @extend %max-w-21;
+  }
 }
 
 @include tablet-mode {
@@ -57,8 +69,8 @@
 
   .gallery-secondary {
     grid-template-areas:
-      "pic1 pic2"
-      "pic1 content";
+      "pic1 pic1 pic2"
+      "pic1 pic1 content";
     gap: 1.8rem;
 
     .pic-1 {
